--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@ body{
 
 header{
     margin-top: 50px;
+    text-align: center;
 }
 
 h1{
-    text-align: center;
     color: white;
     margin-bottom: 50px;
 }
@@ -42,7 +42,7 @@ main{
     background-color: black;
 }
 
-.square{
+.square_normale{
     width: calc(100% / 10);
     height: calc(100% / 10);
     color: white;
@@ -52,8 +52,39 @@ main{
     font-size: 30px;
 }
 
+.square_difficile{
+    width: calc(100% / 9);
+    height: calc(100% / 9);
+    color: white;
+    border: 2px solid rgb(255, 255, 255);
+    text-align: center;
+    padding: 15px;
+    font-size: 30px;
+}
+
+.square_ultra_difficile{
+    width: calc(100% / 7);
+    height: calc(100% / 7);
+    color: white;
+    border: 2px solid rgb(255, 255, 255);
+    text-align: center;
+    padding: 15px;
+    font-size: 30px;
+}
 
 .active{
     background-color: aqua;
     color: black;
 }
+
+
+.selezione{
+    display: none;
+    margin-left: 46%;
+}
+
+.d_block{
+    display: block;
+}
+
+
